--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
- #map {
+#content-wrapper{
+	overflow-y: hidden;
+}
+#app-navigation > ul {
+	clear: both;
+}
+#map {
                 width    : 100%;
                 position : relative;
                 height   : 100%;
@@ -45,4 +51,53 @@ height: 16px;
 width: 16px;
 display: inline-block;
 cursor: pointer
+}
+
+.contact-icon {
+background: url('../img/icons/personBackground.png');
+padding: 4px 5px 13px 4px;
+}
+i{
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+.fright{
+	float: right;
+}
+.micon {
+	margin-top: 13px;
+}
+#loadingContacts{
+	height: 60px;
+	position: fixed;
+	bottom: 45px;
+	width: 241px;
+	vertical-align: middle;
+	padding-top: 15px;
+	cursor: pointer;
+	padding-left: 12px;
+	background-color: #f8f8f8;
+	border-top: 1px solid #ccc;
+}
+#progressBar {
+        width: 222px;
+        height: 22px;
+        border: 1px solid #111;
+        background-color: #292929;
+}
+ 
+#progressBar div {
+        height: 100%;
+        color: #fff;
+        text-align: right;
+        line-height: 22px; /* same as #progressBar height if we want text middle aligned */
+        width: 0;
+        background-color: #426392;
+}
+#app-navigation > ul {
+	padding-bottom: 70px;
+}
+.hidden{
+	display: none;
 }
