fix list subentries not spanning full width

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 	clear: both;
 }
 #app-navigation > ul ul {
- display: inline; 
+	display: inline;
+	width: 100%
 }
 #map {
                 width    : 100%;
