--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,22 @@ div#search-icon {
 	background: url('../img/icons/personBackground.png');
 	padding: 4px 5px 13px 4px;
 }
+.keepDeviceCentered {
+	background: url('../img/icons/trace_off.png');
+	background-size: cover;
+	float: right;
+	margin-top: 14px;
+	cursor: pointer;
+	height: 20px;
+	width: 20px;
+	display: inline-block;
+}
+span.keepDeviceCentered.tracOn {
+	background: url('../img/icons/trace_on.png');
+	background-size: cover;
+	height: 20px;
+	width: 20px;
+}
 i { 
 	display: inline-block;
 	height: 16px;
