Show device location history

--- a/css/style.css
+++ b/css/style.css
@@ -63,21 +63,26 @@ div#search-icon {
 	background: url('../img/icons/personBackground.png');
 	padding: 4px 5px 13px 4px;
 }
+.deviceHistory{
+	float: right;
+	margin-top: 14px;
+	margin-left: 10px;
+}
 .keepDeviceCentered {
 	background: url('../img/icons/trace_off.png');
 	background-size: cover;
 	float: right;
 	margin-top: 14px;
 	cursor: pointer;
-	height: 20px;
-	width: 20px;
+	height: 16px;
+	width: 16px;
 	display: inline-block;
 }
 span.keepDeviceCentered.tracOn {
 	background: url('../img/icons/trace_on.png');
 	background-size: cover;
-	height: 20px;
-	width: 20px;
+	height: 16px;
+	width: 16px;
 }
 i { 
 	display: inline-block;
@@ -147,3 +152,16 @@ table#trackingDevices {
 #trackingDevices > thead > tr > th:first-child {
 	width: 150px;
 }
+
+/* css for timepicker */
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { float: left; clear:left; padding: 0 0 0 5px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 45%; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
+.ui-timepicker-rtl{ direction: rtl; }
+.ui-timepicker-rtl dl { text-align: right; padding: 0 5px 0 0; }
+.ui-timepicker-rtl dl dt{ float: right; clear: right; }
+.ui-timepicker-rtl dl dd { margin: 0 45% 10px 10px; }
