replace standard marker and favorite marker icons

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ div#search-icon {
 	padding: 4px 5px 13px 4px;
 }
 .favorite-icon {
-	background: url('../img/icons/favMarker.png');
+	background: url('../img/icons/favMarker.svg');
 	padding: 4px 5px 13px 4px;
 }
 .photo-marker {
