--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #search {
 	position: absolute;
-	padding: 20px;
-	right: 0;
+	margin: 10px 0 0 10px;
+	left: 0;
 	top: 0;
 	z-index: 10000;
 }
@@ -21,14 +21,28 @@
 	font-weight: bold;
 }
 
-p.location-city {
+span.location-city {
 	color: gray;
-	font-style: italic;
 }
 
 p.opening-hours {
 	padding-left: 5px;
-	font-style: italic;
 	margin-top: 5px !important;
 	margin-bottom: 5px !important;
+}
+
+/* Overriden Leaflet Styles */
+div.leaflet-top.leaflet-left {
+	top: 50px;
+}
+.leaflet-popup-content h2, .leaflet-popup-content h3 {
+	margin-bottom: 0px;
+}
+
+.leaflet-popup-content p.location-city {
+	margin-top: 0px;
+}
+
+.leaflet-popup-content-wrapper {
+	border-radius: 3px !important;
 }
