--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,10 @@ tr.selected td {
     width: 100%;
     height: 100%;
 }
+.favoriteMarker {
+    height: 15px !important;
+    width: 15px !important;
+    -webkit-mask-image: url('images/star.png');
+    -webkit-mask-size: 15px;
+    -webkit-mask-repeat: no-repeat;
+}
