change toggle buttons opacity

--- a/css/style.css
+++ b/css/style.css
@@ -229,3 +229,8 @@ table.editFavorite input[type=text] {
     width: 100%;
     padding: 0px 3px 0px 3px;
 }
+#togglePhotosButton button,
+#toggleFavoritesButton button,
+.toggleCategoryButton button {
+    opacity: 1 !important;
+}
