--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,6 @@ table.editFavorite input[type=text] {
 .category-line > a {
     opacity: 1 !important;
 }
+.ui-autocomplete {
+    z-index: 10000 !important;
+}
