--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,9 @@ tr.selected td {
 .editFavorite td * {
     margin: 1px 1px 1px 0 !important;
 }
+table.editFavorite td {
+    padding: 2px 0px 2px 0px;
+}
 table.editFavorite input[type=text] {
     height: 27px;
     width: 100%;
