Make tooltip Pictures not transparent
Signed-off-by: Arne Hamann <kontakt+github@arne.email>

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,10 @@ tr.selected td {
     padding: 3px;
 }
 
+.leaflet-marker-photo-tooltip {
+    opacity: 1 !important;
+}
+
 .easy-button-button {
     margin: 0 !important;
     padding: 0 !important;
