--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,19 @@ table.editFavorite input[type=text] {
     width: 100%;
     text-align: center;
 }
+/* Overriden routing/geocoder style */
+.leaflet-routing-add-waypoint {
+    width: 25px !important;
+    height: 25px !important;
+    min-width: 25px !important;
+    min-height: 25px !important;
+    padding: 0px !important;
+    border: 1px solid var(--color-border) !important;
+    line-height: 0px !important;
+}
+.leaflet-routing-remove-waypoint::after {
+    border: 1px solid var(--color-border) !important;
+    right: 6px !important;
+    width: 18px !important;
+    height: 4px !important;
+}
