make a controller for routing. toggle, save state: done

--- a/css/style.css
+++ b/css/style.css
@@ -263,11 +263,13 @@ table.editFavorite input[type=text] {
     width: 100%;
     padding: 0px 3px 0px 3px;
 }
+#toggleRoutingButton button,
 #togglePhotosButton button,
 #toggleFavoritesButton button,
 .toggleCategoryButton button {
     opacity: 1 !important;
 }
+#navigation-routing > a,
 #navigation-favorites > a,
 #navigation-photos > a,
 .category-line > a {
