--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
 .noUi-handle {
     height: 20px !important;
     border-radius: 10px !important;
+    background-color: var(--color-main-background) !important;
+    box-shadow: inset 0 0 1px var(--color-background-dark), inset 0 1px 7px var(--color-background-dark), 0 3px 6px -3px var(--color-background-darker) !important;
 }
 
 .noUi-tooltip {
@@ -316,4 +318,5 @@ table.editFavorite input[type=text] {
     right: 6px !important;
     width: 18px !important;
     height: 4px !important;
+    background-color: var(--color-main-background) !important;
 }
