fix contact cluster icon, contact marker borders, contact layer saved state

--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ tr.selected td {
 .leaflet-marker-contact {
     border: 2px solid #fff;
     box-shadow: 3px 3px 10px #888;
+    border-radius: 50%;
 }
 
 .leaflet-marker-contact.contact-marker{
