--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,14 @@ tr.selected td {
     mask: url('images/star-circle.svg') no-repeat 50% 50%;
     mask-size: 15px;
 }
+.trackWaypoint {
+    height: 25px !important;
+    width: 25px !important;
+    -webkit-mask: url('images/marker-icon.svg') no-repeat 50% 50%;
+    -webkit-mask-size: 25px;
+    mask: url('images/marker-icon.svg') no-repeat 50% 50%;
+    mask-size: 25px;
+}
 .line-enabled {
     background: var(--color-background-dark);
 }
@@ -396,4 +404,13 @@ table.editFavorite input[type=text] {
 }
 .app-navigation-entry-menu {
     z-index: 10001;
+}
+#colorinput {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+    min-height: 0px;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
 }
