--- a/css/style.css
+++ b/css/style.css
@@ -298,12 +298,12 @@ tr.selected td {
     height: 100%;
 }
 .favoriteMarker {
-    height: 20px !important;
-    width: 20px !important;
-    -webkit-mask: url('images/star.png') no-repeat 50% 50%;
-    -webkit-mask-size: 17px;
-    mask: url('images/star.png') no-repeat 50% 50%;
-    mask-size: 17px;
+    height: 22px !important;
+    width: 22px !important;
+    -webkit-mask: url('images/star-circle.svg') no-repeat 50% 50%;
+    -webkit-mask-size: 15px;
+    mask: url('images/star-circle.svg') no-repeat 50% 50%;
+    mask-size: 15px;
 }
 .line-enabled {
     background: var(--color-background-dark);
