--- a/css/style.css
+++ b/css/style.css
@@ -252,8 +252,8 @@ tr.selected td {
 }
 
 .leaflet-marker-contact .thumbnail {
-    width: 100%;
-    height: 100%;
+    width: 101%;
+    height: 101%;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -357,6 +357,13 @@ table.editFavorite input[type=text] {
 .tooltip-photo-name {
     width: 100%;
     text-align: center;
+}
+
+.tooltip-contact-avatar {
+    max-width: 100px;
+    max-height: 100px;
+    width: auto;
+    height: auto;
 }
 
 .tooltip-contact-name {
