--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,30 @@ tr.selected td {
     border-radius: 50%;
 }
 
+.leaflet-marker-favorite-cluster .label {
+    position: absolute;
+    top: -7px;
+    right: -11px;
+    color: #fff;
+    background-color: #333;
+    border-radius: 9px;
+    height: 18px;
+    min-width: 18px;
+    line-height: 12px;
+    text-align: center;
+    padding: 3px;
+}
+
+.leaflet-marker-favorite-cluster .thumbnail {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: white;
+    border-radius: 50%;
+}
+
 .leaflet-marker-contact .label {
     position: absolute;
     top: -7px;
